fix(tournament): big tournaments should no longer flow upwards out of the container

--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -106,6 +106,10 @@ station {
   width: 100%;
 }
 
+.match-area {
+  position: absolute;
+}
+
 .pull-right { float: right; }
 .pull-left { float: left; }
 
